--- a/group_test.html
+++ b/group_test.html
@@ -3,15 +3,15 @@
 
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="donation.css">
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="donation_test.css">
+	<link rel="stylesheet" type="text/css" href="group_test.css">
 	<link href='http://fonts.googleapis.com/css?family=Economica' rel='stylesheet' type='text/css'>
 	<title>#C.O.D.E FUN(d)</title>
 </head>
 
 <body>
 	<header class="logo">
-		<img src="images/Logo.png">
+		<img src="group_test/images/Logo.png">
 		<nav>
 			<ul>
 				<li>HOME</li>
@@ -22,27 +22,54 @@
 	</header>
 	<nav class="social_links">
 		<ul>
-			<li><a href="https://www.facebook.com/"><img src="images/facebook_logo.png"></a></li>
-			<li><a href="https://www.twitter.com/"><img src="images/twitter_logo.png"></a></li>
-			<li><a href="https://www.instagram.com/"><img src="images/instagram_logo.png"></a></li>
+			<li><a href="https://www.facebook.com/"><img src="group_test/images/facebook_logo.png"></a></li>
+			<li><a href="https://www.twitter.com/"><img src="group_test/images/twitter_logo.png"></a></li>
+			<li><a href="https://www.instagram.com/"><img src="group_test/images/instagram_logo.png"></a></li>
 		</ul>
 	</nav>
+
 	<div class="about">
 		<h4>What is the #C.O.D.E FUN(d)?</h4>
 
-			<p>	As our world becomes increasingly connected through the Internet, mobile devices and new computing technology, our world has seen tremendous benefits from these new developments. But how many of us truly understand how it all works?</p>
+			<!--<p>	As our world becomes increasingly connected through the Internet, mobile devices and new computing technology, our world has seen tremendous benefits from these new developments. But how many of us truly understand how it all works?</p>!-->
 
-			<p>Our schools face increasingly difficult funding challenges and demands of a modern day curriculum. Too many of our young students cannot access the tools to help them reach their fullest potential. It is imperative that our future generations of leaders, thinkers and professionals are offered the courses, resources and opportunities which will allow them to adapt to the evolving world around us.</p>
+			<!--<p>Our schools face increasingly difficult funding challenges and demands of a modern day curriculum. Too many of our young students cannot access the tools to help them reach their fullest potential. It is imperative that our future generations of leaders, thinkers and professionals are offered the courses, resources and opportunities which will allow them to adapt to the evolving world around us.</p>!-->
 
-			<p>The #C.O.D.E FUN(d), in conjunction with corporate, community and individual partners, provides our students with the means to achieve excellence in the fields of web development and technology. Whether installing new technology in classrooms, hosting events to educate and encourage, or supporting tech-based curriculum in schools, the #C.O.D.E FUN(d) strives to set new standards of future success.</p>
+			<p>The #C.O.D.E FUN(d), in conjunction with corporate, community and individual partners, provides students with the resources to achieve excellence in the fields of computer science and web development. Whether installing new technology in classrooms, hosting events to educate and encourage, or supporting tech-based curriculum in schools, the #C.O.D.E FUN(d) strives to set new standards of future success.</p>
 
 			<p>Your support can help ensure all of our developing scholars can fully tap into their imaginations and help them build their dreams. We all benefit from the stunning developments in technology, but we all must ensure this incredible knowledge is accessible.</p>
 		</div>
 
 		<div class="mission">
-			<p class="ms">
 				<p>The #C.O.D.E FUN(d): Uploading knowledge to our future.</p>
 		</div>
+
+		<ul id="code">
+			<li>
+				<a href="video.html" class="image">
+					<img src="group_test/CBC.png" alt="icon">
+				</a>
+				<div class="content">
+					<a href="video.html" class="desc">NBA All-Star Chris Bosh discusses the importance of coding</a>
+				</div>
+			</li>
+			<li>
+				<a href="video.html" class="image">
+					<img src="group_test/BO.png" alt="icon">
+				</a>
+				<div class="content">
+				<a href="video.html" class="desc">President Barack Obama encourages the study of computer science</a>
+				</div>
+			</li>
+			<li>
+				<a href="video.html" class="image">
+					<img src="group_test/mz.png" alt="icon">
+				</a>
+				<div class="content">
+					<a href="video.html" class="desc">Facebook creator Mark Zuckerberg talks about a teaching experience</a>
+				</div>
+			</li>
+		</ul>
 
 	<div id="newbutton">
 		<a href="button" class="mybutton">CONTRIBUTE TODAY</a>
