--- a/group_test.html
+++ b/group_test.html
@@ -11,7 +11,7 @@
 
 <body>
 	<header class="logo">
-		<img src="group_test/images/Logo.png">
+		<img src="images/Logo.png">
 		<nav>
 			<ul>
 				<li>HOME</li>
@@ -22,9 +22,9 @@
 	</header>
 	<nav class="social_links">
 		<ul>
-			<li><a href="https://www.facebook.com/"><img src="group_test/images/facebook_logo.png"></a></li>
-			<li><a href="https://www.twitter.com/"><img src="group_test/images/twitter_logo.png"></a></li>
-			<li><a href="https://www.instagram.com/"><img src="group_test/images/instagram_logo.png"></a></li>
+			<li><a href="https://www.facebook.com/"><img src="images/facebook_logo.png"></a></li>
+			<li><a href="https://www.twitter.com/"><img src="images/twitter_logo.png"></a></li>
+			<li><a href="https://www.instagram.com/"><img src="images/instagram_logo.png"></a></li>
 		</ul>
 	</nav>
 
@@ -47,7 +47,7 @@
 		<ul id="code">
 			<li>
 				<a href="video.html" class="image">
-					<img src="group_test/CBC.png" alt="icon">
+					<img src="CBC.png" alt="icon">
 				</a>
 				<div class="content">
 					<a href="video.html" class="desc">NBA All-Star Chris Bosh discusses the importance of coding</a>
@@ -55,7 +55,7 @@
 			</li>
 			<li>
 				<a href="video.html" class="image">
-					<img src="group_test/BO.png" alt="icon">
+					<img src="BO.png" alt="icon">
 				</a>
 				<div class="content">
 				<a href="video.html" class="desc">President Barack Obama encourages the study of computer science</a>
@@ -63,7 +63,7 @@
 			</li>
 			<li>
 				<a href="video.html" class="image">
-					<img src="group_test/mz.png" alt="icon">
+					<img src="mz.png" alt="icon">
 				</a>
 				<div class="content">
 					<a href="video.html" class="desc">Facebook creator Mark Zuckerberg talks about a teaching experience</a>
