--- a/gt1.html
+++ b/gt1.html
@@ -4,12 +4,12 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="donation_test.css">
-	<link rel="stylesheet" type="text/css" href="group_test.css">
+	<link rel="stylesheet" type="text/css" href="gt1.css">
 	<link href='http://fonts.googleapis.com/css?family=Economica' rel='stylesheet' type='text/css'>
 	<title>#C.O.D.E FUN(d)</title>
 </head>
 
-<body>
+<body class="index">
 	<header class="logo">
 		<img src="images/Logo.png">
 		<nav>
@@ -44,29 +44,30 @@
 				<p>The #C.O.D.E FUN(d): Uploading knowledge to our future.</p>
 		</div>
 
+		<!--I know it's counterintuitive to direct users away from the site, but for the purposes of this exercise I linked the videos to the youtube address. The group consensus is that the youtube embedded videos look somewhat tacky with their logo/player controls on display, so in order to avoid that I took a screenshot of the video and set the images as clickable links.!-->
 		<ul id="code">
 			<li>
-				<a href="video.html" class="image">
+				<a href="https://www.youtube.com/watch?v=5oHe0ozN7Oc" class="image">
 					<img src="CBC.png" alt="icon">
 				</a>
 				<div class="content">
-					<a href="video.html" class="desc">NBA All-Star Chris Bosh discusses the importance of coding</a>
+					<a href="https://www.youtube.com/watch?v=5oHe0ozN7Oc" class="desc">NBA All-Star Chris Bosh discusses the importance of coding</a>
 				</div>
 			</li>
 			<li>
-				<a href="video.html" class="image">
+				<a href="https://www.youtube.com/watch?v=6XvmhE1J9PY" class="image">
 					<img src="BO.png" alt="icon">
 				</a>
 				<div class="content">
-				<a href="video.html" class="desc">President Barack Obama encourages the study of computer science</a>
+				<a href="https://www.youtube.com/watch?v=6XvmhE1J9PY" class="desc">President Barack Obama encourages the study of computer science</a>
 				</div>
 			</li>
 			<li>
-				<a href="video.html" class="image">
+				<a href="https://www.youtube.com/watch?v=ABw4yPFbEjg" class="image">
 					<img src="mz.png" alt="icon">
 				</a>
 				<div class="content">
-					<a href="video.html" class="desc">Facebook creator Mark Zuckerberg talks about a teaching experience</a>
+					<a href="https://www.youtube.com/watch?v=ABw4yPFbEjg" class="desc">Facebook creator Mark Zuckerberg talks about a teaching experience</a>
 				</div>
 			</li>
 		</ul>
